--- a/#Source/scss/style.scss
+++ b/#Source/scss/style.scss
@@ -53,7 +53,7 @@ body {
             }
         }
         figcaption {
-            color: #7a7676;
+            color: #645e5e;
             font-weight: 500;
             text-align: center;
             margin-top: 20px;
