--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ body {
 }
 
 .container .photo figcaption {
-  color: #7a7676;
+  color: #645e5e;
   font-weight: 500;
   text-align: center;
   margin-top: 20px;
